<resources>
    <string name="app_name">SafeTrip</string>
    <string name="title_activity_sign_up_confirm_pin">SignUpConfirmPin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--about-->
    <string name="about">
        SafeTrip is designed for a fast fare payment process without using real cash money. As soon as you paid the fare, It will connect you to the real time location of the jeepney while also giving you points as a reward to redeem free rides,
        allowing you to save money for the next trip.
    </string>
    <string name="why">
        Why use SafeTrip?\n\n
CONVENIENCE\n helps you to pay the fare without interacting with the other passenger.\n\n
PAYMENT\n you don\'t need to take out your coin or bank note.\n\n
REWARDS\n we offer points for every ride to redeem free rides.\n\n
EASY TO USE\n app  tracking, points, driver\'s info and updates can be viewed instantly.
    </string>
    <string name="how">
        How to get started:\n\n
Sign up using your mobile phone number.\n\n
Enter the pin code that will be sent to your number.\n\n
Enter your basic information\n\n
Confirm your pin code and you\'re done!
    </string>
    <!-- Frequently Ask Questions -->
    <string name="q1">
        1. How to use the app?
    </string>
    <string name="a1">
        You need to install the application first to your mobile device then sign in or log in if you have already created your account.
    </string>

    <string name="q2">
        2. How do I cash-in in the application?
    </string>
    <string name="a2">
        You can cash in via GCash to load up your wallet.
    </string>

    <string name="q3">
        3. How do I pay using the QR code scan?
    </string>
    <string name="a3">
        The generated QR code will be displayed on the jeepney, then passengers can simply pay using the QR code scanner.
    </string>

    <string name="q4">
        4. How to pay in the app?
    </string>
    <string name="a4">
        You need to transfer funds or cash-in the money first in the application before you can pay the fare.
    </string>

    <string name="q5">
        5. How to use points?
    </string>
    <string name="a5">
        You can use it by clicking the redeem button, but at this case you need to acquire 100 pts. first.
    </string>

    <string name="q6">
        6. How to earn points?
    </string>
    <string name="a6">
        You can acquire 3 points each ride and you need to accumulate (100) one hundred points to get a free ride.
    </string>

    <string name="q7">
        7. How should I contact the driver if my belongings were left behind?
    </string>
    <string name="a7">
        You can see the driver\'s contact when you scan the QR code.
    </string>

    <string name="q8">
        7. How to pay with multiple passenger?
    </string>
    <string name="a8">
        Input the number of passengers in the payment section and scan the QR code attached to the jeep.
    </string>

    <string name="q9">
        7. How to sign-in to the application?
    </string>

    <string name="a9">
        Enter your mobile number then, you will receive an OTP to the number you have entered in the application. Then, enter the OTP then click ok. After the OTP, set your desired pin code. Then finally enter your complete name.
    </string>
    <string name="title_activity_safe_trip_location">SafeTripLocation</string>
</resources>