<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a7b90"
    tools:context=".Faqs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="FAQs" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textView8"
            android:layout_marginTop="30dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView14"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a1" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView15"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q2" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView16"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a2" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView17"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q3" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView18"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a3" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView19"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q4" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView20"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a4" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView21"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q5" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView22"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a5" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView23"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q6" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView24"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a6" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView25"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q7" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView26"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a7" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView27"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q8" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView28"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/a8" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView29"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/q9" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView30"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:text="@string/a9" />



    </RelativeLayout>
</ScrollView>